# serpentes

./: pyproject.toml  test
scripts/: format.sh
serpentes/: __init__.py  __main__.py
serpentes/encoding/: __init__.py
serpentes/nodes/: __init__.py
serpentes/parser/: __init__.py  grammar.lark
tests/: bool.srp  compare.srp  comprehension.srp  containers.srp  func.srp  ifs.srp  literals.srp  operators.srp  subscripting.srp  unary.srp  variables.srp
tests/marshal/: __main__.py  compiler.py
